--- a/8150/HW2/HW2.tex
+++ b/8150/HW2/HW2.tex
@@ -14,7 +14,10 @@
 \maketitle
 
 \begin{statement}[Problem]{1}
-
+  Prove that 
+  \begin{align*}
+    \int^{\infty}_0 \sin(x^2)dx=\int^{\infty}_0 \cos(x^2)dx=\frac{\sqrt{2\pi}}{4}.
+  \end{align*}
 \end{statement}
 \begin{proof}
 
