girl if you don't finish this tomorrow I'm gonna lose it

--- a/8150/HW2/HW2.tex
+++ b/8150/HW2/HW2.tex
@@ -20,7 +20,11 @@
   \end{align*}
 \end{statement}
 \begin{proof}
-
+  First note that 
+  \begin{align*}
+    \int^{\infty}_0 e^{ix^2} = \int^{\infty}_0 \cos(x^2) dx + i \int^{\infty}_0 \sin(x^2)dx.
+  \end{align*}
+  Then by the hint, we know that
 \end{proof}
 
 \end{document}
