--- a/stylingtesting/notes.tex
+++ b/stylingtesting/notes.tex
@@ -55,6 +55,18 @@
   boxed title style={boxrule=0.5mm}
 }
 
+\newtcolorbox[auto counter, number within=section]{notation}{
+  enhanced,
+  title={Notation},
+  colframe=black,
+  colback=white,
+  colbacktitle=white,
+  fonttitle=\bfseries,
+  coltitle=black,
+  attach boxed title to top left={yshift=-0.25mm-\tcboxedtitleheight/2,yshifttext=2mm-\tcboxedtitleheight/2, xshift=2mm},
+  boxed title style={boxrule=0.5mm}
+}
+
 \newtcolorbox{newproof}{
   enhanced,
   frame hidden,
@@ -106,14 +118,6 @@
   boxed title style={boxrule=0.5mm},
   attach boxed title to top left={yshift=-0.25mm-\tcboxedtitleheight/2,yshifttext=2mm-\tcboxedtitleheight/2, xshift=2mm},
   borderline west={1.5pt}{8pt}{green!50!black}
-}
-
-\newtcolorbox{sectionbox}{
-  colback=black!10,
-  colframe=black, 
-  fonttitle=\bfseries\Large, 
-  arc=4mm, 
-  width=\textwidth
 }
 
 % Redefine section as well
@@ -176,5 +180,9 @@ Some other text and junk
 \begin{fact}
   This is a fact.
 \end{fact}
+
+\begin{notation}
+  This is notation.
+\end{notation}
 
 \end{document}
