--- a/stylingtesting/notes.tex
+++ b/stylingtesting/notes.tex
@@ -2,6 +2,7 @@
  \usepackage[margin=1in]{geometry} 
 \usepackage{amsmath,amsthm,amssymb,outlines}
 \usepackage{graphicx,tikzsymbols,tcolorbox}
+\newcommand{\C}{\mathbb{C}}
 \renewcommand\qedsymbol{$\blacksquare$}
 \tcbuselibrary{most}
 
@@ -184,5 +185,7 @@ Some other text and junk
 \begin{notation}
   This is notation.
 \end{notation}
+
+Changing the command for $\C$.
 
 \end{document}
